Bug 359124 - kcm_pulseaudio opens non-themed drop down in wrong position
Summary: kcm_pulseaudio opens non-themed drop down in wrong position
Status: RESOLVED FIXED
Alias: None
Product: plasma-pa
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.5.4
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-08 07:00 UTC by Bernie Innocenti
Modified: 2016-05-20 13:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot demonstrating the bug (36.32 KB, image/png)
2016-02-08 07:01 UTC, Bernie Innocenti
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernie Innocenti 2016-02-08 07:00:30 UTC
See attached screenshot.

I use a dark theme and other dropdown menus correctly appear with a dark background and light text.

Reproducible: Always
Comment 1 Bernie Innocenti 2016-02-08 07:01:33 UTC
Created attachment 97080 [details]
Screenshot demonstrating the bug
Comment 2 David Rosca 2016-04-02 10:02:12 UTC
Popup is now correctly themed with Breeze 5.6.1. It is still opened on incorrect position when opened from system settings (it works fine from plasmashell - right click on volume icon).

Fix for the popup position https://git.reviewboard.kde.org/r/127469/
Comment 3 David Rosca 2016-05-20 13:33:01 UTC
Git commit 23b6468fc2486516711ba4ce50f3492fd231d50e by David Rosca.
Committed on 20/05/2016 at 13:30.
Pushed by drosca into branch 'master'.

Use QQuickWidget for QML KCMs

Fix position of QtQuickControls popups.
REVIEW: 127469

M  +1    -1    CMakeLists.txt
M  +1    -0    src/CMakeLists.txt
M  +11   -4    src/kcmoduleqml.cpp

http://commits.kde.org/kcmutils/23b6468fc2486516711ba4ce50f3492fd231d50e