Use QQuickWidget for QML KCMs

Fix position of QtQuickControls popups.

BUG: 359124
REVIEW: 127469